@@ -1,7 +1,6 @@
 .remote
   = link_to_close edit_contact_path(@contact)
   - remote_form_for(@contact) do |f|
-    = hidden_field_tag "opportunity", "#{@opportunity.id if @opportunity}"
     = f.hidden_field :user_id
     = f.hidden_field :assigned_to
     = f.error_messages
