@@ -6,6 +6,7 @@ then you win. –- Mahatma Gandhi
 
 Tue, Mar 24, 2009
 ---------------------------------------------------------------------
+- Finished with [Edit Contacts] including full controller and views specs.
 
 Mon, Mar 23, 2009
 ---------------------------------------------------------------------
